--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 			href="./images/favicon-32x32.png"
 		/>
 
+		<link rel="stylesheet" href="style.css" />
+
 		<title>Frontend Mentor | Easybank landing page</title>
 	</head>
 	<body>
@@ -19,7 +21,8 @@
 				<img src="./images/logo.svg" alt="" class="logo" />
 				<ul>
 					<li><a href="">Home</a></li>
-					<li><a href=""> About</a></li>
+					<li><a href="">About</a></li>
+					<li><a href="">Contact</a></li>
 					<li><a href="">Blog</a></li>
 					<li><a href="">Careers</a></li>
 				</ul>
@@ -30,21 +33,21 @@
 			<div class="hero">
 				<main>
 					<h1 class="main-title">Next generation digital banking</h1>
-					<p class="content main-content">
+					<p class="main-content">
 						Take your financial life online. Your Easybank account will be a
 						one-stop-shop for spending, saving, budgeting, investing, and much
 						more.
 					</p>
 					<button class="cta">Request Invite</button>
 				</main>
-				<div class="hero-image">
-					<img src="./images/image-mockups.png" alt="" />
+				<div class="hero-image-wrapper">
+					<img src="./images/image-mockups.png" alt="" class="hero-image" />
 				</div>
 			</div>
 
 			<section class="why-us">
 				<h3 class="section-title">Why choose Easybank?</h3>
-				<p class="content">
+				<p class="section-content">
 					We leverage Open Banking to turn your bank account into your financial
 					hub. Control your finances like never before.
 				</p>
@@ -52,7 +55,7 @@
 					<div class="card">
 						<img src="./images/icon-online.svg" alt="" />
 						<h4 class="card-title">Online Banking</h4>
-						<p class="content">
+						<p class="card-content">
 							Our modern web and mobile applications allow you to keep track of
 							your finances wherever you are in the world.
 						</p>
@@ -60,7 +63,7 @@
 					<div class="card">
 						<img src="./images/icon-budgeting.svg" alt="" />
 						<h4 class="card-title">Simple Budgeting</h4>
-						<p class="content">
+						<p class="card-content">
 							See exactly where your money goes each month. Receive
 							notifications when you’re close to hitting your limits.
 						</p>
@@ -68,7 +71,7 @@
 					<div class="card">
 						<img src="./images/icon-onboarding.svg" alt="" />
 						<h4 class="card-title">Fast Onboarding</h4>
-						<p class="content">
+						<p class="card-content">
 							We don’t do branches. Open your account in minutes online and
 							start taking control of your finances right away.
 						</p>
@@ -76,7 +79,7 @@
 					<div class="card">
 						<img src="./images/icon-api.svg" alt="" />
 						<h4 class="card-title">Open API</h4>
-						<p class="content">
+						<p class="card-content">
 							Manage your savings, investments, pension, and much more from one
 							account. Tracking your money has never been easier.
 						</p>
