--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
 					<img src="./images/image-mockups.png" alt="" class="hero-image" />
 				</div>
 			</div>
+		</div>
 
-			<section class="why-us">
+		<section class="why-us">
+			<div class="container">
 				<h3 class="section-title">Why choose Easybank?</h3>
 				<p class="section-content">
 					We leverage Open Banking to turn your bank account into your financial
@@ -85,58 +87,72 @@
 						</p>
 					</div>
 				</div>
-			</section>
+			</div>
+		</section>
 
-			<section class="latest-articles">
+		<section class="latest-articles">
+			<div class="container">
 				<h3 class="section-title">Latest Articles</h3>
 				<div class="articles">
 					<article>
-						<img src="./images/image-currency.jpg" alt="" />
+						<!-- <div class="article-img-wrapper"> -->
+						<img src="./images/image-currency.jpg" alt="" class="article-img" />
+						<!-- </div> -->
 						<div class="article-content">
 							<small class="article-author">By Claire Robinson</small>
 							<h5 class="article-title">
 								Receive money in any currency with no fees
 							</h5>
-							<p class="article-content">
+							<p class="article-text">
 								The world is getting smaller and we’re becoming more mobile. So
 								why should you be forced to only receive money in a single …
 							</p>
 						</div>
 					</article>
 					<article>
-						<img src="./images/image-restaurant.jpg" alt="" />
+						<!-- <div class="article-img-wrapper"> -->
+						<img
+							src="./images/image-restaurant.jpg"
+							alt=""
+							class="article-img"
+						/>
+						<!-- </div> -->
 						<div class="article-content">
 							<small class="article-author">By Wilson Hutton</small>
 							<h5 class="article-title">
 								Treat yourself without worrying about money
 							</h5>
-							<p class="article-content">
+							<p class="article-text">
 								Our simple budgeting feature allows you to separate out your
 								spending and set realistic limits each month. That means you …
 							</p>
 						</div>
 					</article>
 					<article>
-						<img src="./images/image-plane.jpg" alt="" />
+						<!-- <div class="article-img-wrapper"> -->
+						<img src="./images/image-plane.jpg" alt="" class="article-img" />
+						<!-- </div> -->
 						<div class="article-content">
 							<small class="article-author">By Wilson Hutton</small>
 							<h5 class="article-title">
 								Take your Easybank card wherever you go
 							</h5>
-							<p class="article-content">
+							<p class="article-text">
 								We want you to enjoy your travels. This is why we don’t charge
 								any fees on purchases while you’re abroad. We’ll even show you …
 							</p>
 						</div>
 					</article>
 					<article>
-						<img src="./images/image-confetti.jpg" alt="" />
+						<!-- <div class="article-img-wrapper"> -->
+						<img src="./images/image-confetti.jpg" alt="" class="article-img" />
+						<!-- </div> -->
 						<div class="article-content">
 							<small class="article-author">By Claire Robinson</small>
 							<h5 class="article-title">
 								Our invite-only Beta accounts are now live!
 							</h5>
-							<p class="article-content">
+							<p class="article-text">
 								After a lot of hard work by the whole team, we’re excited to
 								launch our closed beta. It’s easy to request an invite through
 								the site ...
@@ -144,18 +160,40 @@
 						</div>
 					</article>
 				</div>
-			</section>
-		</div>
+			</div>
+		</section>
+
 		<footer>
-			<div class="container">
+			<div class="container footer-container">
+				<!-- to replace social media svgs with font awesome  -->
 				<nav class="social-media-navbar">
-					<img src="./images/logo.svg" alt="" class="logo" />
+					<img src="./images/logo-light.svg" alt="" class="logo" />
 					<ul>
-						<li><a href="./images/icon-facebook.svg"></a></li>
-						<li><a href="./images/icon-youtube.svg"></a></li>
-						<li><a href="./images/icon-twitter.svg"></a></li>
-						<li><a href="./images/icon-pinterest.svg"></a></li>
-						<li><a href="./images/icon-instagram.svg"></a></li>
+						<li>
+							<a href="" class="media-icon"
+								><img src="./images/icon-facebook.svg"
+							/></a>
+						</li>
+						<li>
+							<a href="" class="media-icon"
+								><img src="./images/icon-youtube.svg"
+							/></a>
+						</li>
+						<li>
+							<a href="" class="media-icon"
+								><img src="./images/icon-twitter.svg"
+							/></a>
+						</li>
+						<li>
+							<a href="" class="media-icon"
+								><img src="./images/icon-pinterest.svg"
+							/></a>
+						</li>
+						<li>
+							<a href="" class="media-icon"
+								><img src="./images/icon-instagram.svg"
+							/></a>
+						</li>
 					</ul>
 				</nav>
 				<nav class="bottom-navbar">
@@ -170,7 +208,7 @@
 						<li><a href="">Privacy Policy</a></li>
 					</ul>
 				</nav>
-				<div class="wrapper">
+				<div class="attribution-wrapper">
 					<button class="cta">Request Invite</button>
 					<p class="copyright">&copy; Easybank. All Rights Reserved</p>
 					<div class="attribution">
