finalized desktop layout

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 			href="./images/favicon-32x32.png"
 		/>
 
+		<script
+			src="https://kit.fontawesome.com/0f4ecf7998.js"
+			crossorigin="anonymous"
+		></script>
+
 		<link rel="stylesheet" href="style.css" />
 
 		<title>Frontend Mentor | Easybank landing page</title>
@@ -95,9 +100,7 @@
 				<h3 class="section-title">Latest Articles</h3>
 				<div class="articles">
 					<article>
-						<!-- <div class="article-img-wrapper"> -->
 						<img src="./images/image-currency.jpg" alt="" class="article-img" />
-						<!-- </div> -->
 						<div class="article-content">
 							<small class="article-author">By Claire Robinson</small>
 							<h5 class="article-title">
@@ -110,13 +113,11 @@
 						</div>
 					</article>
 					<article>
-						<!-- <div class="article-img-wrapper"> -->
 						<img
 							src="./images/image-restaurant.jpg"
 							alt=""
 							class="article-img"
 						/>
-						<!-- </div> -->
 						<div class="article-content">
 							<small class="article-author">By Wilson Hutton</small>
 							<h5 class="article-title">
@@ -129,9 +130,7 @@
 						</div>
 					</article>
 					<article>
-						<!-- <div class="article-img-wrapper"> -->
 						<img src="./images/image-plane.jpg" alt="" class="article-img" />
-						<!-- </div> -->
 						<div class="article-content">
 							<small class="article-author">By Wilson Hutton</small>
 							<h5 class="article-title">
@@ -144,9 +143,7 @@
 						</div>
 					</article>
 					<article>
-						<!-- <div class="article-img-wrapper"> -->
 						<img src="./images/image-confetti.jpg" alt="" class="article-img" />
-						<!-- </div> -->
 						<div class="article-content">
 							<small class="article-author">By Claire Robinson</small>
 							<h5 class="article-title">
@@ -165,34 +162,25 @@
 
 		<footer>
 			<div class="container footer-container">
-				<!-- to replace social media svgs with font awesome  -->
 				<nav class="social-media-navbar">
 					<img src="./images/logo-light.svg" alt="" class="logo" />
 					<ul>
 						<li>
 							<a href="" class="media-icon"
-								><img src="./images/icon-facebook.svg"
-							/></a>
+								><i class="fab fa-facebook-square"></i
+							></a>
 						</li>
 						<li>
-							<a href="" class="media-icon"
-								><img src="./images/icon-youtube.svg"
-							/></a>
+							<a href="" class="media-icon"><i class="fab fa-youtube"></i></a>
 						</li>
 						<li>
-							<a href="" class="media-icon"
-								><img src="./images/icon-twitter.svg"
-							/></a>
+							<a href="" class="media-icon"><i class="fab fa-twitter"></i></a>
 						</li>
 						<li>
-							<a href="" class="media-icon"
-								><img src="./images/icon-pinterest.svg"
-							/></a>
+							<a href="" class="media-icon"><i class="fab fa-pinterest"></i></a>
 						</li>
 						<li>
-							<a href="" class="media-icon"
-								><img src="./images/icon-instagram.svg"
-							/></a>
+							<a href="" class="media-icon"><i class="fab fa-instagram"></i></a>
 						</li>
 					</ul>
 				</nav>
@@ -217,7 +205,12 @@
 							href="https://www.frontendmentor.io?ref=challenge"
 							target="_blank"
 							>Frontend Mentor</a
-						>. Coded by <a href="#">Your Name Here</a>.
+						>. Coded by
+						<a
+							href="https://github.com/Adina-Chirila/frontend-mentor-easybank-landing-page"
+							target="_blank"
+							>Chirila Adina</a
+						>.
 					</div>
 				</div>
 			</div>
