--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		<header>
 			<nav class="navbar container">
 				<img src="./images/logo.svg" alt="" class="logo" />
+				<img src="./images/icon-hamburger.svg" alt="" class="burger" />
 				<ul>
 					<li><a href="">Home</a></li>
 					<li><a href="">About</a></li>
@@ -34,7 +35,7 @@
 				<button class="cta">Request Invite</button>
 			</nav>
 		</header>
-		<div class="container">
+		<div class="container hero-container">
 			<div class="hero">
 				<main>
 					<h1 class="main-title">Next generation digital banking</h1>
@@ -163,7 +164,7 @@
 		<footer>
 			<div class="container footer-container">
 				<nav class="social-media-navbar">
-					<img src="./images/logo-light.svg" alt="" class="logo" />
+					<img src="./images/logo-light.svg" alt="" class="light-logo" />
 					<ul>
 						<li>
 							<a href="" class="media-icon"
