finalized responsive design

--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
 		></script>
 
 		<link rel="stylesheet" href="style.css" />
-
+		<script src="script.js" defer></script>
 		<title>Frontend Mentor | Easybank landing page</title>
 	</head>
 	<body>
+		<div class="backdrop"></div>
 		<header>
 			<nav class="navbar container">
 				<img src="./images/logo.svg" alt="" class="logo" />
 				<img src="./images/icon-hamburger.svg" alt="" class="burger" />
-				<ul>
+				<img src="./images/icon-close.svg" alt="" class="close-btn" />
+				<ul class="navbar-list">
 					<li><a href="">Home</a></li>
 					<li><a href="">About</a></li>
 					<li><a href="">Contact</a></li>
@@ -35,6 +37,7 @@
 				<button class="cta">Request Invite</button>
 			</nav>
 		</header>
+
 		<div class="container hero-container">
 			<div class="hero">
 				<main>
