solved accessibility issues

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
 		<header>
 			<nav class="navbar container">
 				<img src="./images/logo.svg" alt="" class="logo" />
-				<img src="./images/icon-hamburger.svg" alt="" class="burger" />
+				<img
+					src="./images/icon-hamburger.svg"
+					alt=""
+					class="burger"
+					aria-label="mobile navigation"
+				/>
 				<img src="./images/icon-close.svg" alt="" class="close-btn" />
 				<ul class="navbar-list">
 					<li><a href="">Home</a></li>
@@ -170,21 +175,49 @@
 					<img src="./images/logo-light.svg" alt="" class="light-logo" />
 					<ul>
 						<li>
-							<a href="" class="media-icon"
+							<a
+								href="https://www.facebook.com"
+								aria-hidden="true"
+								role="img"
+								class="media-icon"
 								><i class="fab fa-facebook-square"></i
 							></a>
 						</li>
 						<li>
-							<a href="" class="media-icon"><i class="fab fa-youtube"></i></a>
+							<a
+								href="https://www.youtube.com/"
+								aria-hidden="true"
+								role="img"
+								class="media-icon"
+								><i class="fab fa-youtube"></i
+							></a>
 						</li>
 						<li>
-							<a href="" class="media-icon"><i class="fab fa-twitter"></i></a>
+							<a
+								href="https://www.twitter.com/"
+								aria-hidden="true"
+								role="img"
+								class="media-icon"
+								><i class="fab fa-twitter"></i
+							></a>
 						</li>
 						<li>
-							<a href="" class="media-icon"><i class="fab fa-pinterest"></i></a>
+							<a
+								href="https://pinterest.com/"
+								aria-hidden="true"
+								role="img"
+								class="media-icon"
+								><i class="fab fa-pinterest"></i
+							></a>
 						</li>
 						<li>
-							<a href="" class="media-icon"><i class="fab fa-instagram"></i></a>
+							<a
+								href="https://www.instagram.com/"
+								aria-hidden="true"
+								role="img"
+								class="media-icon"
+								><i class="fab fa-instagram"></i
+							></a>
 						</li>
 					</ul>
 				</nav>
