solved accessibility issues

--- a/index.html
+++ b/index.html
@@ -175,47 +175,27 @@
 					<img src="./images/logo-light.svg" alt="" class="light-logo" />
 					<ul>
 						<li>
-							<a
-								href="https://www.facebook.com"
-								aria-hidden="true"
-								role="img"
-								class="media-icon"
+							<a aria-hidden="true" role="img" class="media-icon"
 								><i class="fab fa-facebook-square"></i
 							></a>
 						</li>
 						<li>
-							<a
-								href="https://www.youtube.com/"
-								aria-hidden="true"
-								role="img"
-								class="media-icon"
+							<a aria-hidden="true" role="img" class="media-icon"
 								><i class="fab fa-youtube"></i
 							></a>
 						</li>
 						<li>
-							<a
-								href="https://www.twitter.com/"
-								aria-hidden="true"
-								role="img"
-								class="media-icon"
+							<a aria-hidden="true" role="img" class="media-icon"
 								><i class="fab fa-twitter"></i
 							></a>
 						</li>
 						<li>
-							<a
-								href="https://pinterest.com/"
-								aria-hidden="true"
-								role="img"
-								class="media-icon"
+							<a aria-hidden="true" role="img" class="media-icon"
 								><i class="fab fa-pinterest"></i
 							></a>
 						</li>
 						<li>
-							<a
-								href="https://www.instagram.com/"
-								aria-hidden="true"
-								role="img"
-								class="media-icon"
+							<a aria-hidden="true" role="img" class="media-icon"
 								><i class="fab fa-instagram"></i
 							></a>
 						</li>
